加入判题机（测试版）